Base whitespace fix
Base updated to decrease whitespace between nav bar and content.
Stuff also centralized in general.

--- a/castle_apartments/static/css/main.css
+++ b/castle_apartments/static/css/main.css
@@ -181,3 +181,16 @@ a.article-title:hover {
     object-fit: cover;
     width: 100%;
 }
+
+main h1:first-of-type {
+    margin-top: 3rem;
+    margin-bottom: 0.5rem;
+}
+
+main h1 {
+    margin-bottom: 0.75rem;
+}
+
+main p.subheading {
+    margin-bottom: 1.5rem;
+}
